# tap-nhl

./: .gitignore  Dockerfile  LICENSE  README.md  catalog.json  meltano.yml  pyproject.toml
.secrets/: .gitignore
postgres_queries/: games_played.sql  health_check.sql
tap_NHL/: __init__.py  __main__.py  client.py  constants.py  streams.py  tap.py
tap_NHL/schemas/: goalies.json  skaters.json
tests/: sample_config.json  test_1.py  test_core.py
